--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "rewrites": [
       { "source": "/", "destination": "/api/index.js" },
-      { "source": "/submit", "destination": "/api/index.js" }
+      { "source": "/submit", "destination": "/api/index.js" },
+      { "source": "/processData", "destination": "/api/index.js" }
     ]
   }
