--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
     "rewrites": [
       { "source": "/", "destination": "/api/index.js" },
-      { "source": "/submit", "destination": "/api/index.js" },
-      { "source": "/processData", "destination": "/api/index.js" },
-      {"source": "/picroll", "destination": "/api/index.js" }
+      { "source": "/submit", "destination": "/api/index.js" }
     ]
   }
